<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TotalRecall</string>
    <string name="your_web_client_id" tools:ignore="TypographyDashes">516961312113-8h88j5jb0d6ca5cirhe3h9n85cno37ed.apps.googleusercontent.com</string>
    <string name="my_email">My name: \n%s \n\n My email:\n%s</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="sign_out">sign out</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="add_new_topic_description">Add new topic</string>
    <string name="settings_button_description">Settings</string>
    <string name="topics">Topics</string>
    <string name="your_topic">Your topic</string>
    <string name="no_topics_hint">You have not created topics yet. Go ahead</string>
    <string name="no_libraries_hint">The library is empty. We are working on adding</string>
    <string name="no_cards_hint">You have not created cards yet. Go ahead</string>
    <string name="retry">Retry</string>
    <string name="create">Create</string>
    <string name="back">Back</string>
    <string name="create_topic">Create Topic</string>
    <string name="topic_name">Topic name</string>
    <string name="card_answer">Card answer</string>
    <string name="card_clue">Card clue</string>
    <string name="at_least_1_symbols">At least 1 symbols</string>
    <string name="topic_already_exists">Topic already exists</string>
    <string name="cards">Cards</string>
    <string name="reset_card">Reset</string>
    <string name="got_it">Got it</string>
    <string name="create_card">Create Card</string>
    <string name="library">Library</string>
    <string name="load_topic_from_library">Load topic from library</string>
</resources>