<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_8dp"
            android:text="@string/cards"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="@dimen/_4dp"
            android:background="@color/design_default_color_on_secondary"
            android:src="@drawable/ic_settings" />

    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/got_it"
        android:layout_width="100pt"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/got_it" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cardsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


    <Button
        android:id="@+id/try_again_later"
        android:layout_width="100pt"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/try_again_later" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/createButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/_16dp"
        android:contentDescription="@string/add_new_topic_description"
        app:srcCompat="@drawable/ic_add" />


</LinearLayout>